--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -65,6 +65,8 @@
   {{- end -}}
 
   <link rel="stylesheet" href="{{ "css/main.css" | absURL }}" />
+  <link rel="stylesheet" href="{{ "css/mosaic.css" | absURL }}" />
+
 
   {{- if .Site.Params.staticman -}}
   <link rel="stylesheet" href="{{ "css/staticman.css" | absURL }}" />
