--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,21 +1,23 @@
 /* --- General --- */
 
 body {
-  font-family: 'Lora', 'Times New Roman', serif;
+  /* font-family: 'Lora', 'Times New Roman', serif; */
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 18px;
   color: #404040;
   position: relative;
-  background: #FFF;
+  background: #fbf1c7;
   display: flex;
   flex-flow: column;
   height: 100vh;
+  text-align: justify;
 }
-@media (prefers-color-scheme: dark) {
-  body {
-    background: black;
-    color: white;
-  }
-}
+/* @media (prefers-color-scheme: dark) { */
+/*   body { */
+/*     background: black; */
+/*     color: white; */
+/*   } */
+/* } */
 .container[role=main] {
   margin-bottom:50px;
   flex: 1 0 auto;
@@ -37,48 +39,53 @@ p + p {
 }
 p a {
   /* text-decoration: underline */
-  color: #008AFF;
+  color: #458588;
 }
-@media (prefers-color-scheme: dark) {
-  p a {
-    color: #50afff;
-  }
-}
+/* @media (prefers-color-scheme: dark) { */
+/*   p a { */
+/*     color: #50afff; */
+/*   } */
+/* } */
 
 h1,h2,h3,h4,h5,h6 {
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 800;
 }
 a {
-  color: #008AFF;
+  color: #458588;
 }
-@media (prefers-color-scheme: dark) {
-  a {
-    color: #50afff;
-  }
-}
+/* @media (prefers-color-scheme: dark) { */
+/*   a { */
+/*     color: #50afff; */
+/*   } */
+/* } */
 a:hover,
 a:focus {
-  color: #0085a1;
+  color: #d79921;
 }
 blockquote {
-  color: #808080;
+  border-left: 5px solid #458588;
+  color: #458588;
   font-style: italic;
 }
 blockquote p:first-child {
   margin-top: 0;
 }
-@media (prefers-color-scheme: dark) {
-  blockquote {
-    border-left: 5px solid #444;
-  }
-}
+/* @media (prefers-color-scheme: dark) { */
+/*   blockquote { */
+/*     border-left: 5px solid #444; */
+/*   } */
+/* } */
 hr.small {
   max-width: 100px;
   margin: 15px auto;
   border-width: 4px;
   border-color: inherit;
   border-radius: 3px;
+}
+
+hr {
+  border-color: #d5c4a1;
 }
 
 .main-content {
@@ -127,17 +134,18 @@ img::selection, img::-moz-selection {
   background: transparent;
 }
 
-
 img {
   display: block;
   margin: auto;
+  width: 100%;
+  height: auto;
   max-width: 100%;
 }
-@media (prefers-color-scheme: dark) {
-figure:not(.dark) img, img.white {
-  background-color: white;
-}
-}
+/* @media (prefers-color-scheme: dark) { */
+/* figure:not(.dark) img, img.white { */
+/*   background-color: white; */
+/* } */
+/* } */
 
 .img-title {
   width: 100%;
@@ -153,23 +161,19 @@ figure:not(.dark) img, img.white {
   }
 }
 
-#cusdis_thread {
-  margin-top: 30px;
-}
-
 /* --- Navbar --- */
 
 .navbar-custom {
-  background: #F5F5F5;
-  border-bottom: 1px solid #EAEAEA;
+  background: #404040;
+  border-bottom: 1px solid #404040;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
-@media (prefers-color-scheme: dark) {
-  .navbar-custom {
-    background: #505050;
-    border-bottom: 1px solid #AAA;
-  }
-}
+/* @media (prefers-color-scheme: dark) { */
+/*   .navbar-custom { */
+/*     background: #505050; */
+/*     border-bottom: 1px solid #AAA; */
+/*   } */
+/* } */
 
 .navbar-custom .nav li a {
   text-transform: uppercase;
@@ -180,15 +184,15 @@ figure:not(.dark) img, img.white {
 .navbar-custom .navbar-brand,
 .navbar-custom .nav li a {
   font-weight: 800;
-  color: #404040;
+  color: #ffffff;
 }
 
-@media (prefers-color-scheme: dark) {
-  .navbar-custom .navbar-brand,
-  .navbar-custom .nav li a {
-    color: #b0b0b0;
-  }
-}
+/* @media (prefers-color-scheme: dark) { */
+/*   .navbar-custom .navbar-brand, */
+/*   .navbar-custom .nav li a { */
+/*     color: #b0b0b0; */
+/*   } */
+/* } */
 
 .navbar-custom .navbar-brand:hover,
 .navbar-custom .navbar-brand:focus ,
@@ -201,9 +205,9 @@ figure:not(.dark) img, img.white {
 .navbar-custom .navbar-brand:focus ,
 .navbar-custom .nav li a:hover,
 .navbar-custom .nav li a:focus {
-  @media (prefers-color-scheme: dark) {
-    color: #b0e0ff;
-  }
+/*   @media (prefers-color-scheme: dark) { */
+/*     color: #b0e0ff; */
+/*   } */
 }
 
 .navbar-custom .navbar-brand-logo {
@@ -339,24 +343,24 @@ figure:not(.dark) img, img.white {
     border-width: 0 1px 1px;
   }
 }
-@media (prefers-color-scheme: dark) {
-  .navbar-custom .nav .navlinks-container:hover {
-    background: #666;
-  }
-  .navbar-custom .nav .navlinks-container .navlinks-children a {
-    border: 1px solid #AAA;
-  }
-  .navbar-custom .nav .navlinks-container .navlinks-children a {
-    background: #444;
-  }
-}
+/* @media (prefers-color-scheme: dark) { */
+/*   .navbar-custom .nav .navlinks-container:hover { */
+/*     background: #666; */
+/*   } */
+/*   .navbar-custom .nav .navlinks-container .navlinks-children a { */
+/*     border: 1px solid #AAA; */
+/*   } */
+/*   .navbar-custom .nav .navlinks-container .navlinks-children a { */
+/*     background: #444; */
+/*   } */
+/* } */
 
 /* --- Footer --- */
 
 footer {
   padding: 30px 0;
-  background: #F5F5F5;
-  border-top: 1px #EAEAEA solid;
+  background: #EBDBB2;
+  border-top: 1px #D5C4A1 solid;
   margin-top: auto;
   font-size: 14px;
 }
@@ -406,15 +410,15 @@ footer div.disclaimer {
   }
 }
 
-@media (prefers-color-scheme: dark) {
-  footer {
-    background: #444;
-    border-top: 1px #AAA solid;
-  }
-  footer a {
-    color: #AAA;
-  }
-}
+/* @media (prefers-color-scheme: dark) { */
+/*   footer { */
+/*     background: #444; */
+/*     border-top: 1px #AAA solid; */
+/*   } */
+/*   footer a { */
+/*     color: #AAA; */
+/*   } */
+/* } */
 
 /* --- Post preview --- */
 
@@ -436,11 +440,11 @@ footer div.disclaimer {
   text-decoration: none;
   color: #404040;
 }
-@media (prefers-color-scheme: dark) {
-  .post-preview a {
-    color: #AAA;
-  }
-}
+/* @media (prefers-color-scheme: dark) { */
+/*   .post-preview a { */
+/*     color: #AAA; */
+/*   } */
+/* } */
 
 .post-preview a:focus,
 .post-preview a:hover {
@@ -619,8 +623,9 @@ footer div.disclaimer {
   font-size: 27px;
   line-height: 1.1;
   display: block;
+  color: #458588;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-weight: 300;
+  font-weight: 350;
   margin: 10px 0 0;
 }
 .intro-header .post-heading .post-subheading {
@@ -675,7 +680,7 @@ footer div.disclaimer {
 
 .header-section.has-img .no-img {
   margin-top: 0;
-  background: #FCFCFC;
+  background: #00FCFC;
   margin: 0 0 40px;
   padding: 20px 0;
   box-shadow: 0 0 5px #AAA;
@@ -742,12 +747,12 @@ footer div.disclaimer {
   border: 1px solid #0085a1;
 }
 
-@media (prefers-color-scheme: dark) {
-.pager li a {
-  background: #444;
-  color: white;
-}
-}
+/* @media (prefers-color-scheme: dark) { */
+/* .pager li a { */
+/*   background: #444; */
+/*   color: white; */
+/* } */
+/* } */
 
 .pager {
   margin: 10px 0 0;
@@ -778,19 +783,19 @@ table tr {
   margin: 0;
   padding: 0;
 }
-@media (prefers-color-scheme: dark) {
-}
+/* @media (prefers-color-scheme: dark) { */
+/* } */
 table tr:nth-child(2n) {
   background-color: #f8f8f8;
 }
-@media (prefers-color-scheme: dark) {
-table tr {
-  background-color: #181818;
-}
-table tr:nth-child(2n) {
-  background-color: #303030
-}
-}
+/* @media (prefers-color-scheme: dark) { */
+/* table tr { */
+/*   background-color: #181818; */
+/* } */
+/* table tr:nth-child(2n) { */
+/*   background-color: #303030 */
+/* } */
+/* } */
 table tr th {
   font-weight: bold;
   border: 1px solid #cccccc;
@@ -918,45 +923,61 @@ h4.see-also {
   transform: scale(1.4)
 }
 
-/* Dark mode */
-@media (prefers-color-scheme: dark) {
-  code {
-    background-color: #222;
-    color: #fbb;
-  }
-  pre code {
-    color: #ccc;
-  }
-  .well {
-    background-color: #444;
-  }
-  .panel {
-    background-color: #222;
-  }
-  .list-group-item {
-    background-color: #333;
-  }
+.well {
+  background-color: #ebdbb2;
+  border-color: #d5c4a1;
+}
+
+code {
+  background-color: #ebdbb2;
+  color: #7C6F64;
+}
+
+pre.example {
+  color: #404040;
+  background-color: #D5C4A1;
+  border-color: #BDAE93;
+}
 
   pre.chroma {
-    color: white;
-    background-color: #444;
+    color: #404040;
+    background-color: #EBDBB2;
   }
-  pre.chroma .k {
-    color: #44AACC;
-  }
-  pre.chroma .kt {
-    color: #33CCCC;
-  }
-  pre.chroma .o {
-    color: #AAA;
-  }
-  pre.chroma .nb {
-    color: #00fee9;
-  }
-  pre.chroma .ow {
-    color: #CC0;
-  }
-}
+/* Dark mode */
+/* @media (prefers-color-scheme: dark) { */
+/*   pre code { */
+/*     color: #ccc; */
+/*   } */
+/*   .well { */
+/*     background-color: #444; */
+/*   } */
+/*   .panel { */
+/*     background-color: #222; */
+/*   } */
+/*   .list-group-item { */
+/*     background-color: #333; */
+/*   } */
+
+/*   pre.chroma { */
+/*     color: white; */
+/*     background-color: #444; */
+/*   } */
+/*   pre.chroma .k { */
+/*     color: #44AACC; */
+/*   } */
+/*   pre.chroma .kt { */
+/*     color: #33CCCC; */
+/*   } */
+/*   pre.chroma .o { */
+/*     color: #AAA; */
+/*   } */
+/*   pre.chroma .nb { */
+/*     color: #00fee9; */
+/*   } */
+/*   pre.chroma .ow { */
+/*     color: #CC0; */
+/*   } */
+/* } */
 
 /* --- Make long KaTeX equations scrollable in the x-axis --- */
 .katex-display>.katex {
@@ -965,32 +986,3 @@ h4.see-also {
   }
 
 
-  .highlight {
-    box-sizing: border-box;
-    padding: 10px;
-    position: relative;
-  }
-  
-  .copyCodeButton {
-    background-color: #f5f5f5;
-    border: 1px solid #ccc;
-    color: black;
-    cursor: pointer;
-    display: none;
-    font-size: 14px;
-    padding: 5px 10px;
-    position: absolute;
-    right: 10px;
-    top: 10px;
-    transition: background-color 0.3s ease;
-    z-index: 10;
-  }
-  
-  .highlight:hover .copyCodeButton {
-    display: block;
-  }
-  
-  .copyCodeButton:hover {
-    background-color: #e0e0e0;
-  }
-  
