:art: Change footer

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -46,9 +46,9 @@
     <!--       {{ end }} -->
     <!--     </ul> -->
 
-    <p class="credits copyright">
-    <b> This website is still under construction, thank you for your comprehension. </b>
-    </p>
+    <!-- <p class="credits copyright"> -->
+    <!-- <b> This website is still under construction, thank you for your comprehension. </b> -->
+    <!-- </p> -->
         <p class="credits copyright text-muted">
           {{ if .Site.Params.author.name }}
             {{ if .Site.Params.author.website }}
